// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoCarousel renders correctly 1`] = `
<View
  style={
    {
      "height": 54,
      "padding": 3,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={null}
    data={
      [
        "https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg",
        "https://inaturalist-open-data.s3.amazonaws.com/photos/2/large.jpeg",
        "https://inaturalist-open-data.s3.amazonaws.com/photos/3/large.jpeg",
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 4,
                  "marginLeft": 3,
                  "marginRight": 3,
                  "overflow": "hidden",
                  "width": 42,
                }
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "height": undefined,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": undefined,
                    }
                  }
                />
                <View
                  accessibilityLabel="View photo"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                  testID="PhotoCarousel.displayPhoto.https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 4,
                  "marginLeft": 3,
                  "marginRight": 3,
                  "overflow": "hidden",
                  "width": 42,
                }
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://inaturalist-open-data.s3.amazonaws.com/photos/2/large.jpeg",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "height": undefined,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": undefined,
                    }
                  }
                />
                <View
                  accessibilityLabel="View photo"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                  testID="PhotoCarousel.displayPhoto.https://inaturalist-open-data.s3.amazonaws.com/photos/2/large.jpeg"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 4,
                  "marginLeft": 3,
                  "marginRight": 3,
                  "overflow": "hidden",
                  "width": 42,
                }
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://inaturalist-open-data.s3.amazonaws.com/photos/3/large.jpeg",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "height": undefined,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": undefined,
                    }
                  }
                />
                <View
                  accessibilityLabel="View photo"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                  testID="PhotoCarousel.displayPhoto.https://inaturalist-open-data.s3.amazonaws.com/photos/3/large.jpeg"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`PhotoCarousel renders correctly for large screen 1`] = `
<View
  style={
    {
      "height": 117,
      "padding": 8.5,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={null}
    data={
      [
        "https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg",
        "https://inaturalist-open-data.s3.amazonaws.com/photos/2/large.jpeg",
        "https://inaturalist-open-data.s3.amazonaws.com/photos/3/large.jpeg",
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 9,
                  "height": 83,
                  "margin": 8.5,
                  "overflow": "hidden",
                  "width": 83,
                }
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "height": undefined,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": undefined,
                    }
                  }
                />
                <View
                  accessibilityLabel="View photo"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                  testID="PhotoCarousel.displayPhoto.https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 9,
                  "height": 83,
                  "margin": 8.5,
                  "overflow": "hidden",
                  "width": 83,
                }
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://inaturalist-open-data.s3.amazonaws.com/photos/2/large.jpeg",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "height": undefined,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": undefined,
                    }
                  }
                />
                <View
                  accessibilityLabel="View photo"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                  testID="PhotoCarousel.displayPhoto.https://inaturalist-open-data.s3.amazonaws.com/photos/2/large.jpeg"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "transform": [
                  {
                    "rotateZ": "0",
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 9,
                  "height": 83,
                  "margin": 8.5,
                  "overflow": "hidden",
                  "width": 83,
                }
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://inaturalist-open-data.s3.amazonaws.com/photos/3/large.jpeg",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "height": undefined,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": undefined,
                    }
                  }
                />
                <View
                  accessibilityLabel="View photo"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                  testID="PhotoCarousel.displayPhoto.https://inaturalist-open-data.s3.amazonaws.com/photos/3/large.jpeg"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
